--- a/POSVTA4/CATACOMIS.html
+++ b/POSVTA4/CATACOMIS.html
@@ -2,32 +2,79 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Configurar Comisiones por Departamento</title>
+<title>Departamentos y Comisiones – PROVSOFT</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
-body{font-family:Poppins,Arial;background:#f4f6f8;padding:20px}
-h2{margin-bottom:10px}
-table{width:100%;border-collapse:collapse;background:#fff}
-th,td{border:1px solid #ddd;padding:8px;font-size:14px}
-th{background:#00416A;color:#fff}
-select,input{padding:5px}
-button{padding:6px 10px;border:none;border-radius:6px;
-background:#0c6cbd;color:#fff;cursor:pointer}
+body{
+  font-family:Poppins,Arial;
+  background:#f4f6f8;
+  padding:20px
+}
+h2{margin-bottom:6px}
+.small{font-size:12px;color:#666;margin-bottom:12px}
+
+table{
+  width:100%;
+  border-collapse:collapse;
+  background:#fff
+}
+th,td{
+  border:1px solid #ddd;
+  padding:8px;
+  font-size:14px
+}
+th{
+  background:#00416A;
+  color:#fff
+}
+
+input,select{
+  padding:6px;
+  width:100%;
+  box-sizing:border-box
+}
+
+button{
+  padding:6px 12px;
+  border:none;
+  border-radius:6px;
+  background:#0c6cbd;
+  color:#fff;
+  cursor:pointer
+}
 button:active{transform:scale(.97)}
-.small{font-size:12px;color:#666}
+
+.badge{
+  background:#c0392b;
+  color:#fff;
+  font-size:11px;
+  padding:3px 6px;
+  border-radius:6px;
+  margin-left:6px
+}
+
+.ok{
+  background:#1e8e3e!important
+}
 </style>
 </head>
+
 <body>
 
-<h2>⚙️ Configuración de Comisiones</h2>
-<div class="small">Esto actualiza la comisión directamente en los productos (SKUs)</div>
+<h2>⚙️ Departamentos y Comisiones</h2>
+<div class="small">
+Renombra departamentos y asigna comisión.  
+Se aplica a <b>todos los productos activos</b> del departamento.
+</div>
 
 <table id="tabla">
 <thead>
 <tr>
   <th>ID</th>
-  <th>Departamento</th>
-  <th>Tipo</th>
+  <th>Nombre actual</th>
+  <th>Nuevo nombre</th>
+  <th>Tipo comisión</th>
   <th>Valor</th>
   <th>Aplicar</th>
 </tr>
@@ -53,11 +100,12 @@ const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
 /* ======================================================
-   1️⃣ OBTENER DEPARTAMENTOS DESDE PRODUCTOS ACTIVOS
+   OBTENER DEPARTAMENTOS DESDE PRODUCTOS ACTIVOS
    ====================================================== */
 async function obtenerDepartamentos() {
-  const q = query(collection(db, "productos"), where("activo", "==", true));
-  const snap = await getDocs(q);
+  const snap = await getDocs(
+    query(collection(db, "productos"), where("activo", "==", true))
+  );
 
   const map = new Map();
 
@@ -71,25 +119,31 @@ async function obtenerDepartamentos() {
     }
   });
 
-  return Array.from(map.values())
-    .sort((a, b) => Number(a.id) - Number(b.id));
+  return [...map.values()].sort((a,b)=>Number(a.id)-Number(b.id));
 }
 
 /* ======================================================
-   2️⃣ RENDER Y APLICAR COMISIÓN A SKUs
+   RENDER
    ====================================================== */
 async function render() {
   const tbody = document.querySelector("#tabla tbody");
   tbody.innerHTML = "";
 
-  const departamentos = await obtenerDepartamentos();
+  const deps = await obtenerDepartamentos();
 
-  departamentos.forEach(dep => {
+  deps.forEach(dep => {
     const tr = document.createElement("tr");
+    const sinNombre = dep.nombre === "SIN NOMBRE";
 
     tr.innerHTML = `
       <td>${dep.id}</td>
-      <td>${dep.nombre}</td>
+      <td>
+        ${dep.nombre}
+        ${sinNombre ? `<span class="badge">SIN NOMBRE</span>` : ""}
+      </td>
+      <td>
+        <input placeholder="Nuevo nombre (opcional)">
+      </td>
       <td>
         <select>
           <option value="porcentaje">%</option>
@@ -97,41 +151,58 @@ async function render() {
         </select>
       </td>
       <td>
-        <input type="number" step="0.01" value="0" style="width:80px">
+        <input type="number" step="0.01" value="0">
       </td>
       <td>
         <button>💾 Aplicar</button>
       </td>
     `;
 
+    const inpNombre = tr.querySelector("input");
     const sel = tr.querySelector("select");
-    const inp = tr.querySelector("input");
+    const inpValor = tr.querySelectorAll("input")[1];
     const btn = tr.querySelector("button");
 
     btn.onclick = async () => {
-      if (!confirm(`Aplicar comisión a TODOS los productos de "${dep.nombre}"?`)) {
-        return;
-      }
+      const nuevoNombre =
+        inpNombre.value.trim().toUpperCase() || dep.nombre;
 
-      const q = query(
-        collection(db, "productos"),
-        where("activo", "==", true),
-        where("departamento_id", "==", dep.id)
+      const tipo = sel.value;
+      const valor = Number(inpValor.value) || 0;
+
+      if (!confirm(
+        `Aplicar cambios al departamento "${dep.id}"?\n\n` +
+        `Nombre: ${nuevoNombre}\n` +
+        `Comisión: ${tipo} ${valor}`
+      )) return;
+
+      const snap = await getDocs(
+        query(
+          collection(db,"productos"),
+          where("activo","==",true),
+          where("departamento_id","==",dep.id)
+        )
       );
 
-      const snap = await getDocs(q);
       let total = 0;
 
       for (const d of snap.docs) {
         await updateDoc(d.ref, {
-          comision_tipo: sel.value,
-          comision_valor: Number(inp.value),
+          departamento: nuevoNombre,
+          comision_tipo: tipo,
+          comision_valor: valor,
           updatedAt: serverTimestamp()
         });
         total++;
       }
 
-      alert(`✅ Comisión aplicada a ${total} productos`);
+      btn.textContent = "✔ Listo";
+      btn.classList.add("ok");
+      inpNombre.disabled = true;
+      inpValor.disabled = true;
+      sel.disabled = true;
+
+      alert(`✅ ${total} productos actualizados`);
     };
 
     tbody.appendChild(tr);
